--- a/native/react/package.json
+++ b/native/react/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "10.2.1",
+    "@januswel/object-utilities": "^1.0.1",
     "@react-native-community/async-storage": "1.12.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "5.8.0",
