--- a/native/android/app/build.gradle
+++ b/native/android/app/build.gradle
@@ -100,6 +100,9 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
-
+    //写真のトリミング
     implementation 'com.github.yalantis:ucrop:2.2.5'
+
+    // グラフ
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
