--- a/native/react/package.json
+++ b/native/react/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "5.7.3",
     "@react-navigation/stack": "5.9.0",
     "axios": "^0.20.0",
+    "dayjs": "^1.9.1",
     "expo": "^38.0.0",
     "expo-font": "^8.2.2",
     "expo-status-bar": "^1.0.0",
