--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -162,6 +162,7 @@ services:
     volumes:
       - ./infra/terraform:/terraform:cached
       - ./secrets:/secrets
+      - ~/.ssh:/root/.ssh
     tty: true
     stdin_open: true
     environment:
