--- a/infra/server/dev/presto-pay-dev-vm-api01.yaml
+++ b/infra/server/dev/presto-pay-dev-vm-api01.yaml
@@ -14,24 +14,73 @@ packages:
   - bash-completion
   - bind-utils
   - chrony
-  - docker-engine
+  - containerd.io
+  - docker-ce
+  - docker-ce-cli
   - epel-release
   - git
+  - make
   - net-tools
   - traceroute
   - tree
   - unzip
   - vim
   - wget
+  - yum-utils
 
 yum_repos:
-  dockerrepo:
-    name: Docker Repository
-    baseurl: https://yum.dockerproject.org/repo/main/centos/$releasever/
-    enabled: true
-    gpgcheck: true
-    gpgkey: https://yum.dockerproject.org/gpg
-    failovermethod: priority
+  docker-ce-stable:
+    name: Docker CE Stable - x86_64
+    baseurl: https://download.docker.com/linux/centos/$releasever/$basearch/stable
+    enabled: 1
+    gpgcheck: 1
+    gpgkey: https://download.docker.com/linux/centos/gpg
+  docker-ce-stable-source:
+    name: Docker CE Stable - Sources
+    baseurl: https://download.docker.com/linux/centos/$releasever/source/stable
+    enabled: 0
+    gpgcheck: 1
+    gpgkey: https://download.docker.com/linux/centos/gpg
+  docker-ce-nightly:
+    name: Docker CE Nightly - x86_64
+    baseurl: https://download.docker.com/linux/centos/$releasever/$basearch/nightly
+    enabled: 0
+    gpgcheck: 1
+    gpgkey: https://download.docker.com/linux/centos/gpg
+  docker-ce-nightly-source:
+    name: Docker CE Nightly - Sources
+    baseurl: https://download.docker.com/linux/centos/$releasever/source/nightly
+    enabled: 0
+    gpgcheck: 1
+    gpgkey: https://download.docker.com/linux/centos/gpg
+
+ntp:
+  enabled: true
+  ntp_client: chrony
+  config:
+    confpath: /etc/chrony.conf
+    template: |
+      ## template:jinja
+      {% if pools -%}# pools{% endif %}
+      {% for pool in pools -%}
+      pool {{pool}} iburst
+      {% endfor %}
+      {%- if servers %}# servers
+      {% endif %}
+      {% for server in servers -%}
+      server {{server}} iburst
+      {% endfor %}
+      port 0
+  servers:
+    - ntp1.jst.mfeed.ad.jp
+    - ntp2.jst.mfeed.ad.jp
+    - ntp3.jst.mfeed.ad.jp
+
+manage_resolv_conf: false
+resolv_conf:
+  nameservers:
+    - 1.1.1.1
+    - 8.8.8.8
 
 write_files:
   - path: /etc/sysctl.conf
@@ -42,8 +91,8 @@ write_files:
 
 runcmd:
   - sed -i -e 's/^(SELINUX=).*$/\1disabled/' /etc/selinux/config
-  - curl -L https://github.com/docker/compose/releases/download/1.16.1/docker-compose-`uname -s`-`uname -m` -o /usr/local/bin/docker-compose
+  - curl -L "https://github.com/docker/compose/releases/download/1.27.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
   - chmod +x /usr/local/bin/docker-compose
-  - systemctl disable firewalld
-  - service docker start
-  - chkconfig docker on
+  - ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
+  - systemctl disable --now firewalld
+  - systemctl enable --now docker
