--- a/infra/server/dev/presto-pay-dev-vm-api.yaml
+++ b/infra/server/dev/presto-pay-dev-vm-api.yaml
@@ -76,7 +76,7 @@ write_files:
       port 0
 
 runcmd:
-  - sed -i -e 's/^(SELINUX=).*$/\1disabled/' /etc/selinux/config
+  - sed -i "s/\(^SELINUX=\).*$/\1disabled/" /etc/selinux/config
   - curl -L "https://github.com/docker/compose/releases/download/1.27.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
   - chmod +x /usr/local/bin/docker-compose
   - ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
