--- a/docs/12_backend/21_swagger/apiv1.yaml
+++ b/docs/12_backend/21_swagger/apiv1.yaml
@@ -8,8 +8,10 @@ info:
 servers:
   - url: https://api.presto-pay-stg.calmato.work/v1
     description: 検証環境
+  - url: http://api.presto-pay-dev.calmato.work/v1
+    description: 開発環境 (クラウド)
   - url: http://localhost:8080/v1
-    description: 開発環境
+    description: 開発環境 (ローカル)
 
 paths:
   /auth:
@@ -92,7 +94,7 @@ paths:
           description: グループID
       responses:
         '200':
-          $ref: '#/components/responses/AddGroup'
+          $ref: '#/components/responses/ShowProfile'
         '400':
           $ref: '#/components/responses/BadRequest'
         '401':
@@ -115,7 +117,7 @@ paths:
           description: グループID
       responses:
         '200':
-          $ref: '#/components/responses/RemoveGroup'
+          $ref: '#/components/responses/ShowProfile'
         '400':
           $ref: '#/components/responses/BadRequest'
         '401':
@@ -1438,7 +1440,6 @@ components:
                       type: string
                       format: date-time
                       description: 更新日時
-
 
     ShowGroup:
       description: グループ詳細取得APIのレスポンス
