--- a/docs/12_backend/21_swagger/apiv1.yaml
+++ b/docs/12_backend/21_swagger/apiv1.yaml
@@ -80,51 +80,6 @@ paths:
         '500':
           $ref: '#/components/responses/Unkown'
 
-  /auth/groups/{groupId}:
-    post:
-      summary: 非公開グループ追加
-      security:
-        - BearerAuth: []
-      parameters:
-        - in: path
-          name: groupId
-          schema:
-            type: string
-          required: true
-          description: グループID
-      responses:
-        '200':
-          $ref: '#/components/responses/ShowProfile'
-        '400':
-          $ref: '#/components/responses/BadRequest'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '409':
-          $ref: '#/components/responses/Conflict'
-        '500':
-          $ref: '#/components/responses/Unkown'
-
-    delete:
-      summary: 非公開グループ削除
-      security:
-        - BearerAuth: []
-      parameters:
-        - in: path
-          name: groupId
-          schema:
-            type: string
-          required: true
-          description: グループID
-      responses:
-        '200':
-          $ref: '#/components/responses/ShowProfile'
-        '400':
-          $ref: '#/components/responses/BadRequest'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '500':
-          $ref: '#/components/responses/Unkown'
-
   /auth/friends:
     get:
       summary: 友達一覧取得
@@ -434,6 +389,51 @@ paths:
           $ref: '#/components/responses/Unauthorized'
         '403':
           $ref: '#/components/responses/Forbidden'
+        '500':
+          $ref: '#/components/responses/Unkown'
+
+  /groups/{groupId}/hidden:
+    post:
+      summary: 非公開グループ追加
+      security:
+        - BearerAuth: []
+      parameters:
+        - in: path
+          name: groupId
+          schema:
+            type: string
+          required: true
+          description: グループID
+      responses:
+        '200':
+          $ref: '#/components/responses/IndexGroups'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '409':
+          $ref: '#/components/responses/Conflict'
+        '500':
+          $ref: '#/components/responses/Unkown'
+
+    delete:
+      summary: 非公開グループ削除
+      security:
+        - BearerAuth: []
+      parameters:
+        - in: path
+          name: groupId
+          schema:
+            type: string
+          required: true
+          description: グループID
+      responses:
+        '200':
+          $ref: '#/components/responses/IndexGroups'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
         '500':
           $ref: '#/components/responses/Unkown'
 
