--- a/docker-compose.api.yaml
+++ b/docker-compose.api.yaml
@@ -13,6 +13,7 @@ services:
       - 8080:8080
       - 8081:9090
     command: envoy -c /etc/envoy/envoy.yaml
+    restart: always
 
   user_api:
     container_name: presto_pay_user_api
@@ -27,6 +28,7 @@ services:
       - GOOGLE_APPLICATION_CREDENTIALS=${GOOGLE_APPLICATION_CREDENTIALS}
       - GCP_STORAGE_BUCKET_NAME=${GCP_STORAGE_BUCKET_NAME}
     command: realize start
+    restart: always
 
   calc_api:
     container_name: presto_pay_calc_api
@@ -41,6 +43,7 @@ services:
       - GOOGLE_APPLICATION_CREDENTIALS=${GOOGLE_APPLICATION_CREDENTIALS}
       - GCP_STORAGE_BUCKET_NAME=${GCP_STORAGE_BUCKET_NAME}
     command: realize start
+    restart: always
 
   batch:
     container_name: presto_pay_batch
@@ -55,6 +58,7 @@ services:
     container_name: presto_pay_redis
     build:
       context: ./infra/docker/redis
+    restart: always
 
   swagger:
     container_name: presto_pay_swagger
@@ -66,6 +70,7 @@ services:
       - 8000:8080
     environment:
       SWAGGER_JSON: /swagger.yaml
+    restart: always
 
   admin:
     container_name: presto_pay_admin
@@ -82,3 +87,4 @@ services:
       - FIREBASE_PROJECT_ID=${FIREBASE_PROJECT_ID}
       - FIREBASE_MESSAGING_SENDER_ID=${FIREBASE_MESSAGING_SENDER_ID}
     command: yarn dev -H 0.0.0.0 -p 3000
+    restart: always
