--- a/docs/12_backend/21_swagger/apiv1.yaml
+++ b/docs/12_backend/21_swagger/apiv1.yaml
@@ -8,10 +8,12 @@ info:
 servers:
   - url: https://api.presto-pay-stg.calmato.work/v1
     description: 検証環境
-  - url: http://api.presto-pay-dev.calmato.work/v1
+  - url: https://api.presto-pay-dev.calmato.work/v1
     description: 開発環境 (クラウド)
   - url: http://localhost:8080/v1
     description: 開発環境 (ローカル)
+  - url: https://api.presto-pay.calmato.work/v1
+    description: 本番環境
 
 paths:
   /auth:
