--- a/.github/workflows/cd-user-api.yaml
+++ b/.github/workflows/cd-user-api.yaml
@@ -55,36 +55,36 @@ jobs:
         run: |
           docker push ${GCR_HOSTNAME}/${GCP_PROJECT_ID}/${GCR_IMAGE_NAME}
 
-  update_pod_for_stg:
-    name: Update pod image for staging
-    needs: deploy_image_for_stg
-    runs-on: ubuntu-latest
+  # update_pod_for_stg:
+  #   name: Update pod image for staging
+  #   needs: deploy_image_for_stg
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v2
+  #   steps:
+  #     - name: Check out code
+  #       uses: actions/checkout@v2
 
-      - name: Setup gcloud CLI
-        uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
-        with:
-          version: '281.0.0'
-          service_account_email: ${{ secrets.STG_GCP_SA_EMAIL }}
-          service_account_key: ${{ secrets.STG_GCP_SA_KEY }}
-          export_default_credentials: true
+  #     - name: Setup gcloud CLI
+  #       uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+  #       with:
+  #         version: '281.0.0'
+  #         service_account_email: ${{ secrets.STG_GCP_SA_EMAIL }}
+  #         service_account_key: ${{ secrets.STG_GCP_SA_KEY }}
+  #         export_default_credentials: true
 
-      - name: Configure gcloud
-        run: |
-          gcloud config set project ${GCP_PROJECT_ID}
-          gcloud config set run/platform managed
-          gcloud config set run/region ${GCP_REGION}
-          gcloud components install kubectl
+  #     - name: Configure gcloud
+  #       run: |
+  #         gcloud config set project ${GCP_PROJECT_ID}
+  #         gcloud config set run/platform managed
+  #         gcloud config set run/region ${GCP_REGION}
+  #         gcloud components install kubectl
 
-      - name: Connect to GKE cluster
-        run: |
-          gcloud container clusters get-credentials ${GKE_CLUSTER_NAME} \
-            --zone ${GKE_ZONE} \
-            --project ${GCP_PROJECT_ID}
+  #     - name: Connect to GKE cluster
+  #       run: |
+  #         gcloud container clusters get-credentials ${GKE_CLUSTER_NAME} \
+  #           --zone ${GKE_ZONE} \
+  #           --project ${GCP_PROJECT_ID}
 
-      - name: Udpate pod image
-        working-directory: ./infra/kubernetes
-        run: make update-deployment APP_NAME=${GKE_DEPLOYMENT_NAME}
+  #     - name: Udpate pod image
+  #       working-directory: ./infra/kubernetes
+  #       run: make update-deployment APP_NAME=${GKE_DEPLOYMENT_NAME}
