--- a/docker-compose.api.stg.yaml
+++ b/docker-compose.api.stg.yaml
@@ -12,6 +12,11 @@ services:
     ports:
       - 8080:8080
       - 8081:9090
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 128M
     command: envoy -c /etc/envoy/envoy.yaml
     restart: always
 
@@ -27,6 +32,11 @@ services:
     environment:
       - GOOGLE_APPLICATION_CREDENTIALS=${GOOGLE_APPLICATION_CREDENTIALS}
       - GCP_STORAGE_BUCKET_NAME=${GCP_STORAGE_BUCKET_NAME}
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 128M
     command: realize start
     restart: always
 
@@ -42,6 +52,11 @@ services:
     environment:
       - GOOGLE_APPLICATION_CREDENTIALS=${GOOGLE_APPLICATION_CREDENTIALS}
       - GCP_STORAGE_BUCKET_NAME=${GCP_STORAGE_BUCKET_NAME}
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 128M
     command: realize start
     restart: always
 
@@ -53,9 +68,19 @@ services:
     working_dir: /go/src/github.com/calmato/presto-pay/api/batch
     volumes:
       - ./api/batch:/go/src/github.com/calmato/presto-pay/api/batch:cached
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 128M
 
   redis:
     container_name: presto_pay_redis
     build:
       context: ./infra/docker/redis
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 256M
     restart: always
