--- a/native/android/app/build.gradle
+++ b/native/android/app/build.gradle
@@ -8,104 +8,106 @@ apply plugin: 'com.google.firebase.firebase-perf'
 apply plugin: 'com.google.firebase.crashlytics'
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "28.0.3"
+  compileSdkVersion 30
+  buildToolsVersion "28.0.3"
 
-    dataBinding {
-        enabled = true
+  dataBinding {
+    enabled = true
+  }
+
+  defaultConfig {
+    applicationId "work.calmato.prestopay"
+    minSdkVersion 28
+    targetSdkVersion 30
+    versionCode 1
+    versionName "1.0"
+
+    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+  }
+
+  buildTypes {
+    customDebugType {
+      debuggable true
     }
-
-    defaultConfig {
-        applicationId "work.calmato.prestopay"
-        minSdkVersion 28
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    release {
+      minifyEnabled false
+      proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
     }
-
-    buildTypes {
-        customDebugType {
-            debuggable true
-        }
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
+  }
   kotlinOptions {
     jvmTarget = JavaVersion.VERSION_1_8.toString()
   }
 }
 
 dependencies {
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'com.google.firebase:firebase-invites:17.0.0'
-    kapt "android.arch.lifecycle:compiler:1.1.1"
-    implementation 'androidx.room:room-runtime:2.2.5'
-    kapt "android.arch.persistence.room:compiler:1.1.1"
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.10"
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation "androidx.navigation:navigation-fragment-ktx:2.3.1"
-    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.3.1"
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+  implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+  implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+  implementation 'com.google.firebase:firebase-invites:17.0.0'
+  kapt "android.arch.lifecycle:compiler:1.1.1"
+  implementation 'androidx.room:room-runtime:2.2.5'
+  kapt "android.arch.persistence.room:compiler:1.1.1"
+  implementation fileTree(dir: 'libs', include: ['*.jar'])
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.10"
+  implementation 'androidx.appcompat:appcompat:1.2.0'
+  implementation 'androidx.core:core-ktx:1.3.2'
+  implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+  implementation "androidx.navigation:navigation-fragment-ktx:2.3.1"
+  implementation "androidx.navigation:navigation-dynamic-features-fragment:2.3.1"
+  androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+  androidTestImplementation 'androidx.test.ext:junit:1.1.2'
 
-    // Testing Navigation
-    androidTestImplementation "androidx.navigation:navigation-testing:2.3.1"
-    implementation 'com.google.android.material:material:1.3.0-alpha03'
+  // Testing Navigation
+  androidTestImplementation "androidx.navigation:navigation-testing:2.3.1"
+  implementation 'com.google.android.material:material:1.3.0-alpha03'
 
-    //firebase
-    implementation 'com.google.firebase:firebase-analytics:18.0.0'
-    implementation 'com.google.firebase:firebase-auth:20.0.1'
-    implementation 'com.google.android.gms:play-services-auth:19.0.0'
-    implementation 'com.google.firebase:firebase-dynamic-links-ktx:19.1.1'
-    implementation 'com.google.firebase:firebase-analytics-ktx:18.0.0'
-    implementation 'com.google.firebase:firebase-crashlytics:17.3.0'
-    implementation 'com.google.firebase:firebase-perf:19.0.10'
-    implementation 'com.google.firebase:firebase-messaging:21.0.0'
+  //firebase
+  implementation 'com.google.firebase:firebase-analytics:18.0.0'
+  implementation 'com.google.firebase:firebase-auth:20.0.1'
+  implementation 'com.google.android.gms:play-services-auth:19.0.0'
+  implementation 'com.google.firebase:firebase-dynamic-links-ktx:19.1.1'
+  implementation 'com.google.firebase:firebase-analytics-ktx:18.0.0'
+  implementation 'com.google.firebase:firebase-crashlytics:17.3.0'
+  implementation 'com.google.firebase:firebase-perf:19.0.10'
+  implementation 'com.google.firebase:firebase-messaging:21.0.0'
 
-    //Twitter SDK
-    implementation 'com.twitter.sdk.android:twitter-core:3.1.1'
+  //Twitter SDK
+  implementation 'com.twitter.sdk.android:twitter-core:3.1.1'
 
-    //Facebook
-    implementation 'com.facebook.android:facebook-android-sdk:4.42.0'
+  //Facebook
+  implementation 'com.facebook.android:facebook-android-sdk:4.42.0'
 
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.12.1'
-    implementation group: 'org.json', name: 'json', version: '20180813'
-    implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.9.6'
-    testImplementation 'junit:junit:4.13'
+  implementation 'com.google.code.gson:gson:2.8.6'
+  implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+  implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+  implementation 'com.squareup.okhttp3:okhttp:3.12.1'
+  implementation group: 'org.json', name: 'json', version: '20180813'
+  implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.9.6'
+  testImplementation 'junit:junit:4.13'
 
-    // Moshi
-    implementation "com.squareup.moshi:moshi:1.8.0"
-    implementation "com.squareup.moshi:moshi-kotlin:1.8.0"
+  // Moshi
+  implementation "com.squareup.moshi:moshi:1.8.0"
+  implementation "com.squareup.moshi:moshi-kotlin:1.8.0"
 
-    // Retrofit with Moshi Converter
-    implementation "com.squareup.retrofit2:retrofit:2.5.0"
-    implementation "com.squareup.retrofit2:converter-moshi:2.5.0"
+  // Retrofit with Moshi Converter
+  implementation "com.squareup.retrofit2:retrofit:2.5.0"
+  implementation "com.squareup.retrofit2:converter-moshi:2.5.0"
 
-    // Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0"
+  // Coroutines
+  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0"
+  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0"
 
-    // Retrofit Coroutines Support
-    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
+  // Retrofit Coroutines Support
+  implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
 
-    implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
+  implementation 'com.squareup.picasso:picasso:2.5.2'
+  implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
 
-    //写真のトリミング
-    implementation 'com.github.yalantis:ucrop:2.2.5'
-    implementation 'de.hdodenhof:circleimageview:3.1.0'
+  //写真のトリミング
+  implementation 'com.github.yalantis:ucrop:2.2.5'
+  implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-    // グラフ
-    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+  // グラフ
+  implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+  implementation 'androidx.preference:preference:1.1.1'
 }
