--- a/docs/12_backend/21_swagger/internal.yaml
+++ b/docs/12_backend/21_swagger/internal.yaml
@@ -35,6 +35,48 @@ paths:
         '500':
           $ref: '#/components/responses/Unkown'
 
+  /unauthorized-users:
+    post:
+      summary: 未登録ユーザー追加
+      security:
+        - BearerAuth: []
+      requestBody:
+        $ref: '#/components/requestBodies/CreateUnauthorizedUser'
+      responses:
+        '200':
+          $ref: '#/components/responses/UnauthorizedUser'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '500':
+          $ref: '#/components/responses/Unkown'
+
+  /unauthorized-users/{userId}:
+    post:
+      summary: 未登録ユーザー追加
+      security:
+        - BearerAuth: []
+      parameters:
+        - in: path
+          name: userId
+          schema:
+            type: string
+            format: uuid
+          required: true
+          description: ユーザーUUID
+      requestBody:
+        $ref: '#/components/requestBodies/UpdateUnauthorizedUser'
+      responses:
+        '200':
+          $ref: '#/components/responses/UnauthorizedUser'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '409':
+          $ref: '#/components/responses/Conflict'
+        '500':
+          $ref: '#/components/responses/Unkown'
+
   /users/{userId}/groups/{groupId}:
     post:
       summary: ユーザー グループ追加
@@ -169,6 +211,41 @@ components:
               message:
                 type: string
 
+  requestBodies:
+    CreateUser:
+      description: 未認証ユーザー追加APIのリクエスト
+      required: true
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              name:
+                type: string
+                description: 表示名
+              thumbnail:
+                type: string
+                description: サムネイル
+            required:
+              - name
+
+    UpdateUser:
+      description: 未認証ユーザー編集APIのリクエスト
+      required: true
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              name:
+                type: string
+                description: 表示名
+              thumbnail:
+                type: string
+                description: サムネイル
+            required:
+              - name
+
   responses:
     BadRequest:
       description: Bad Request
@@ -256,6 +333,32 @@ components:
                 items:
                   type: string
                   format: uuid
+              createdAt:
+                type: string
+                format: date-time
+                description: 作成日時
+              updatedAt:
+                type: string
+                format: date-time
+                description: 更新日時
+
+    UnauthorizedUser:
+      description: 未認証ユーザー情報取得APIのレスポンス
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              id:
+                type: string
+                format: uuid
+                description: ユーザーID
+              name:
+                type: string
+                description: 表示名
+              thumbnail:
+                type: string
+                description: サムネイルURL
               createdAt:
                 type: string
                 format: date-time
