--- a/native/android/app/build.gradle
+++ b/native/android/app/build.gradle
@@ -43,7 +43,8 @@ dependencies {
   implementation 'androidx.legacy:legacy-support-v4:1.0.0'
   implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
   implementation 'com.google.firebase:firebase-invites:17.0.0'
-  kapt "android.arch.lifecycle:compiler:1.1.1"
+    implementation 'com.google.firebase:firebase-ads:19.5.0'
+    kapt "android.arch.lifecycle:compiler:1.1.1"
   implementation 'androidx.room:room-runtime:2.2.5'
   kapt "android.arch.persistence.room:compiler:1.1.1"
   implementation fileTree(dir: 'libs', include: ['*.jar'])
