Native adを簡易的に実装

--- a/native/android/settings.gradle
+++ b/native/android/settings.gradle
@@ -1,2 +1,4 @@
+include ':nativetemplates'
 rootProject.name='PrestoPay'
 include ':app'
+project(':nativetemplates').projectDir = new File(rootDir, 'googleads-mobile-android-native-templates-master/nativetemplates/')
