--- a/native/android/app/build.gradle
+++ b/native/android/app/build.gradle
@@ -110,4 +110,7 @@ dependencies {
   implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
   implementation 'androidx.preference:preference:1.1.1'
+
+  // Native ad
+  implementation project(':nativetemplates')
 }
