feat: User APIの認証情報の取得方法変更

--- a/.env.temp
+++ b/.env.temp
@@ -1,4 +1,5 @@
 GOOGLE_APPLICATION_CREDENTIALS=/secrets/xxxxxx-firebase-adminsdk-xxxxxx.json
+GCP_SERVICE_KEY_JSON={}
 GCP_STORAGE_BUCKET_NAME=xxxxxx.appspot.com
 TERRAFORM_CREDENTIALS=/secrets/xxxxxx-terraform-xxxxxx.json
 FIREBASE_API_KEY=xxxxxx
