--- a/docker-compose.api.prod.yaml
+++ b/docker-compose.api.prod.yaml
@@ -30,7 +30,7 @@ services:
       - ./api/user:/go/src/github.com/calmato/presto-pay/api/user:cached
       - ./secrets:/secrets
     environment:
-      - GOOGLE_APPLICATION_CREDENTIALS=${GOOGLE_APPLICATION_CREDENTIALS}
+      - GCP_SERVICE_KEY_JSON=${GCP_SERVICE_KEY_JSON}
       - GCP_STORAGE_BUCKET_NAME=${GCP_STORAGE_BUCKET_NAME}
     deploy:
       resources:
@@ -50,7 +50,7 @@ services:
       - ./api/calc:/go/src/github.com/calmato/presto-pay/api/calc:cached
       - ./secrets:/secrets
     environment:
-      - GOOGLE_APPLICATION_CREDENTIALS=${GOOGLE_APPLICATION_CREDENTIALS}
+      - GCP_SERVICE_KEY_JSON=${GCP_SERVICE_KEY_JSON}
       - GCP_STORAGE_BUCKET_NAME=${GCP_STORAGE_BUCKET_NAME}
     command: realize start
     deploy:
