--- a/infra/nginx/stg/default.conf
+++ b/infra/nginx/stg/default.conf
@@ -1,13 +1,13 @@
 upstream user_api {
-  server user-api.presto-pay-stg.calmato.work:443;
+  server $USER_API_URL:$USER_API_PORT;
 }
 
 upstream calc_api {
-  server calc-api.presto-pay-stg.calmato.work:443;
+  server $CALC_API_URL:$CALC_API_PORT;
 }
 
 server {
-  listen            8080;
+  listen            $PORT;
   server_name       localhost;
   keepalive_timeout 60;
 
@@ -21,14 +21,5 @@ server {
 
   location ^~ /v1/users/ {
     proxy_pass https://user_api;
-  }
-
-  #error_page  404              /404.html;
-
-  # redirect server error pages to the static page /50x.html
-  #
-  error_page   500 502 503 504  /50x.html;
-  location = /50x.html {
-    root   /usr/share/nginx/html;
   }
 }
