--- a/infra/nginx/stg/default.conf
+++ b/infra/nginx/stg/default.conf
@@ -1,9 +1,9 @@
 upstream user_api {
-  server user-api.presto-pay-stg.calmato.work:443;
+  server user-api.presto-pay-stg.calmato.work;
 }
 
 upstream calc_api {
-  server calc-api.presto-pay-stg.calmato.work:443;
+  server calc-api.presto-pay-stg.calmato.work;
 }
 
 server {
@@ -11,23 +11,21 @@ server {
   server_name       localhost;
   keepalive_timeout 60;
 
-  location / {
+  location ~ ^/v1/auth/([^/]*)/?$ {
+    proxy_pass https://user_api;
+  }
+
+  location ~ ^/v1/users/([^/]*)/?$ {
+    proxy_pass https://user_api;
+  }
+
+  location ~ ^/v1/groups/([^/]*)/?$ {
     proxy_pass https://calc_api;
   }
 
-  location ^~ /v1/auth/ {
-    proxy_pass https://user_api;
-  }
+  error_page 404             /404.html;
+  error_page 500 502 503 504 /50x.html;
 
-  location ^~ /v1/users/ {
-    proxy_pass https://user_api;
-  }
-
-  #error_page  404              /404.html;
-
-  # redirect server error pages to the static page /50x.html
-  #
-  error_page   500 502 503 504  /50x.html;
   location = /50x.html {
     root   /usr/share/nginx/html;
   }
