--- a/infra/nginx/stg/default.conf
+++ b/infra/nginx/stg/default.conf
@@ -11,6 +11,9 @@ server {
   server_name       localhost;
   keepalive_timeout 60;
 
+  ssl_certificate     /etc/nginx/ssl/nginx.crt;
+  ssl_certificate_key /etc/nginx/ssl/nginx.key;
+
   location ~ ^/v1/auth/([^/]*)/?$ {
     proxy_pass https://user_api;
   }
