--- a/infra/docker/load-balancer/Dockerfile_staging
+++ b/infra/docker/load-balancer/Dockerfile_staging
@@ -5,7 +5,7 @@ ENV TZ Asia/Tokyo
 
 WORKDIR /root
 
-ADD ./infra/nginx/stg /etc/nginx/conf.d/
+ADD ./infra/nginx/stg/default.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 8080
 CMD ["nginx", "-g", "daemon off;"]
