--- a/infra/nginx/stg/default.conf
+++ b/infra/nginx/stg/default.conf
@@ -8,7 +8,7 @@ upstream calc_api {
 
 server {
   listen            8080;
-  server_name       localhost;
+  server_name       0.0.0.0;
   keepalive_timeout 60;
 
   location ~ ^/v1/auth/([^/]*)/?$ {
