--- a/infra/docker/load-balancer/Dockerfile_staging
+++ b/infra/docker/load-balancer/Dockerfile_staging
@@ -5,6 +5,9 @@ ENV TZ Asia/Tokyo
 
 WORKDIR /root
 
+RUN apk add --no-cache \
+      ca-certificates
+
 ADD ./infra/nginx/stg/default.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 8080
