--- a/infra/docker/load-balancer/Dockerfile_development
+++ b/infra/docker/load-balancer/Dockerfile_development
@@ -4,3 +4,8 @@ ENV LANG C.UTF-8
 ENV TZ Asia/Tokyo
 
 WORKDIR /root
+
+ADD ./infra/nginx/stg/default.conf /etc/nginx/conf.d/default.conf
+
+EXPOSE 8080
+CMD ["nginx", "-g", "daemon off;"]
