--- a/infra/nginx/stg/default.conf
+++ b/infra/nginx/stg/default.conf
@@ -1,25 +1,25 @@
-upstream user_api {
-  server user-api.presto-pay-stg.calmato.work;
-}
-
-upstream calc_api {
-  server calc-api.presto-pay-stg.calmato.work;
-}
+resolver 1.1.1.1;
 
 server {
   listen            8080;
   server_name       0.0.0.0;
   keepalive_timeout 60;
 
-  location ~ ^/v1/auth/([^/]*)/?$ {
-    proxy_pass https://user_api;
+  location /v1/auth {
+    set $url              https://user-api.presto-pay-stg.calmato.work;
+    proxy_pass            $url;
+    proxy_ssl_server_name on;
   }
 
-  location ~ ^/v1/users/([^/]*)/?$ {
-    proxy_pass https://user_api;
+  location /v1/users {
+    set $url              https://user-api.presto-pay-stg.calmato.work;
+    proxy_pass            $url;
+    proxy_ssl_server_name on;
   }
 
-  location ~ ^/v1/groups/([^/]*)/?$ {
-    proxy_pass https://calc_api;
+  location /v1/groups {
+    set $url              https://calc-api.presto-pay-stg.calmato.work;
+    proxy_pass            $url;
+    proxy_ssl_server_name on;
   }
 }
