--- a/.github/workflows/cd-nginx-stg.yaml
+++ b/.github/workflows/cd-nginx-stg.yaml
@@ -4,7 +4,7 @@ on:
     paths:
       - '.github/workflows/cd-nginx.yaml'
       - 'infra/docker/reverse-proxy/**'
-      - 'infra/nginx/**'
+      - 'infra/nginx/stg/**'
     branches:
       - master
 
