feat: Nginx周りの更新

--- a/.github/workflows/cd-nginx-prod.yaml
+++ b/.github/workflows/cd-nginx-prod.yaml
@@ -2,17 +2,17 @@ name: Reverse Proxy(Nginx) Deploy to Staging
 on:
   push:
     paths:
-      - '.github/workflows/cd-nginx-stg.yaml'
+      - '.github/workflows/cd-nginx-prod.yaml'
       - 'infra/docker/reverse-proxy/**'
-      - 'infra/nginx/stg/**'
+      - 'infra/nginx/prod/**'
     branches:
       - master
 
 env:
-  GCP_PROJECT_ID: ${{ secrets.STG_GCP_PROJECT_ID }}
-  GCP_REGION: ${{ secrets.STG_GCP_REGION }}
+  GCP_PROJECT_ID: ${{ secrets.PROD_GCP_PROJECT_ID }}
+  GCP_REGION: ${{ secrets.PROD_GCP_REGION }}
   GCR_HOSTNAME: asia.gcr.io
-  GCR_IMAGE_NAME: presto-pay-stg-reverse-proxy
+  GCR_IMAGE_NAME: presto-pay-reverse-proxy
   GCR_IMAGE_TAG: ${{ github.sha }}
 
 jobs:
@@ -28,8 +28,8 @@ jobs:
         uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
         with:
           version: '281.0.0'
-          service_account_email: ${{ secrets.STG_GCP_SA_EMAIL }}
-          service_account_key: ${{ secrets.STG_GCP_SA_KEY }}
+          service_account_email: ${{ secrets.PROD_GCP_SA_EMAIL }}
+          service_account_key: ${{ secrets.PROD_GCP_SA_KEY }}
           export_default_credentials: true
 
       - name: Configure gcloud
@@ -41,7 +41,7 @@ jobs:
 
       - name: Docker Build
         run: |
-          docker build -f ./infra/docker/reverse-proxy/Dockerfile_staging -t ${GCR_HOSTNAME}/${GCP_PROJECT_ID}/${GCR_IMAGE_NAME} .
+          docker build -f ./infra/docker/reverse-proxy/Dockerfile -t ${GCR_HOSTNAME}/${GCP_PROJECT_ID}/${GCR_IMAGE_NAME} .
 
       - name: Attached Tag
         run: |
