--- a/infra/nginx/prod/default.conf
+++ b/infra/nginx/prod/default.conf
@@ -6,19 +6,19 @@ server {
   keepalive_timeout 60;
 
   location /v1/auth {
-    set $url              https://user-api.presto-pay-stg.calmato.work;
+    set $url              https://user-api.presto-pay.calmato.work;
     proxy_pass            $url;
     proxy_ssl_server_name on;
   }
 
   location /v1/users {
-    set $url              https://user-api.presto-pay-stg.calmato.work;
+    set $url              https://user-api.presto-pay.calmato.work;
     proxy_pass            $url;
     proxy_ssl_server_name on;
   }
 
   location /v1/groups {
-    set $url              https://calc-api.presto-pay-stg.calmato.work;
+    set $url              https://calc-api.presto-pay.calmato.work;
     proxy_pass            $url;
     proxy_ssl_server_name on;
   }
