--- a/.github/workflows/cd-nginx-stg.yaml
+++ b/.github/workflows/cd-nginx-stg.yaml
@@ -14,6 +14,7 @@ env:
   GCR_HOSTNAME: asia.gcr.io
   GCR_IMAGE_NAME: presto-pay-stg-reverse-proxy
   GCR_IMAGE_TAG: ${{ github.sha }}
+  GCP_RUN_NAME: reverse-proxy
 
 jobs:
   deploy_image_for_stg:
@@ -51,3 +52,30 @@ jobs:
       - name: Push Google Cloud Registry for Staging
         run: |
           docker push ${GCR_HOSTNAME}/${GCP_PROJECT_ID}/${GCR_IMAGE_NAME}
+
+  deploy_cloud_run_for_stg:
+    name: Deploy container to Cloud Run in staging
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      - name: Setup gcloud CLI
+        uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+        with:
+          version: '281.0.0'
+          service_account_email: ${{ secrets.STG_GCP_SA_EMAIL }}
+          service_account_key: ${{ secrets.STG_GCP_SA_KEY }}
+          export_default_credentials: true
+
+      - name: Configure gcloud
+        run: |
+          gcloud config set project ${GCP_PROJECT_ID}
+          gcloud config set run/platform managed
+          gcloud config set run/region ${GCP_REGION}
+          gcloud auth configure-docker
+
+      - name: Deploy docker image to Cloud Run
+        run: |
+          gcloud run deploy ${GCP_RUN_NAME} --image ${GCR_HOSTNAME}/${GCP_PROJECT_ID}/${GCR_IMAGE_NAME} --region ${GCP_REGION} --platform managed
