--- a/.github/workflows/cd-nginx-stg.yaml
+++ b/.github/workflows/cd-nginx-stg.yaml
@@ -78,4 +78,4 @@ jobs:
 
       - name: Deploy docker image to Cloud Run
         run: |
-          gcloud run deploy ${GCP_RUN_NAME} --image ${GCR_HOSTNAME}/${GCP_PROJECT_ID}/${GCR_IMAGE_NAME} --region ${GCP_REGION} --platform managed
+          gcloud run deploy ${GCP_RUN_NAME} --image ${GCR_HOSTNAME}/${GCP_PROJECT_ID}/${GCR_IMAGE_NAME}:latest --region ${GCP_REGION} --platform managed
