--- a/native/android/app/build.gradle
+++ b/native/android/app/build.gradle
@@ -21,8 +21,11 @@ android {
     targetSdkVersion 30
     versionCode 1
     versionName "1.0"
-
     testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    Properties properties = new Properties()
+    properties.load(project.rootProject.file('local.properties').newDataInputStream())
+    def AD_KEY = properties.getProperty('ad_key')
+    buildConfigField("String", "AD_KEY", "\"${AD_KEY}\"")
   }
 
   buildTypes {
