--- a/native/android/app/src/main/AndroidManifest.xml
+++ b/native/android/app/src/main/AndroidManifest.xml
@@ -8,10 +8,10 @@
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
   <application
     android:allowBackup="true"
-    android:icon="@mipmap/ic_launcher"
+    android:icon="@drawable/icon_presto_pay"
     android:label="@string/app_name"
     android:networkSecurityConfig="@xml/network_security_config"
-    android:roundIcon="@mipmap/ic_launcher_round"
+    android:roundIcon="@drawable/icon_presto_pay"
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
     <activity android:name=".MainActivity">
