fix: Githubでエラーが出たので修正を試みる
Signed-off-by: Atsuhide <atsuhide.i@gmail.com>

--- a/native/android/app/build.gradle
+++ b/native/android/app/build.gradle
@@ -32,8 +32,8 @@ android {
       def TWITTER_CONSUMER_SECRET = properties.getProperty('twitter_consumer_secret')
       def FACEBOOK_APP_ID = properties.getProperty('facebook_app_id')
       def FACEBOOK_LOGIN_PROTOCOL_SCHEME = properties.getProperty('facebook_login_protocol_scheme')
-      buildConfigField("String", "AD_KEY", "\"${AD_KEY}\"")
-      buildConfigField("String", "BASE_URL","\"${BASE_URL}\"")
+      resValue("string", "AD_KEY", "\"${AD_KEY}\"")
+      resValue("string", "BASE_URL","\"${BASE_URL}\"")
       resValue("string", "TWITTER_CONSUMER_KEY","\"${TWITTER_CONSUMER_KEY}\"")
       resValue("string","TWITTER_CONSUMER_SECRET","\"${TWITTER_CONSUMER_SECRET}\"")
       resValue("string", "FACEBOOK_APP_ID","\"${FACEBOOK_APP_ID}\"")
@@ -46,8 +46,8 @@ android {
       def TWITTER_CONSUMER_SECRET = properties.getProperty('twitter_consumer_secret')
       def FACEBOOK_APP_ID = properties.getProperty('facebook_app_id')
       def FACEBOOK_LOGIN_PROTOCOL_SCHEME = properties.getProperty('facebook_login_protocol_scheme')
-      buildConfigField("String", "AD_KEY", "\"${AD_KEY}\"")
-      buildConfigField("String", "BASE_URL","\"${BASE_URL}\"")
+      resValue("string", "AD_KEY", "\"${AD_KEY}\"")
+      resValue("string", "BASE_URL","\"${BASE_URL}\"")
       resValue("string", "TWITTER_CONSUMER_KEY","\"${TWITTER_CONSUMER_KEY}\"")
       resValue("string","TWITTER_CONSUMER_SECRET","\"${TWITTER_CONSUMER_SECRET}\"")
       resValue("string", "FACEBOOK_APP_ID","\"${FACEBOOK_APP_ID}\"")
